Fixed archive entry spacing.

--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -40,7 +40,7 @@
 }
 
 .archive__item-title {
-  margin-bottom: 1em;
+  margin-bottom: .2em;
   font-family: $sans-serif-narrow;
 
   a + a {
